--- a/style.css
+++ b/style.css
@@ -921,14 +921,14 @@ p .sperolin {
 
 /* FOOTER_FINISH */
 
-@media (max-width: 720px){
+@media (max-width: 800px){
     .footer_top_info img,
     .footer_top_info h2{
         margin-bottom: 50px;
     }
 
     .main_info__left p{
-        font-size: 27px;
+        font-size: 24px;
         line-height: 45px;
         margin-right: 31px;
         margin-bottom: 20px;
@@ -986,5 +986,9 @@ p .sperolin {
     .our_sertificat h3{
         margin: 35px 0 20px 0;
         font-size: 29px;
+    }
+
+    .footer_top_info h2{
+        font-size: 38px;
     }
 }
