--- a/style.css
+++ b/style.css
@@ -966,6 +966,11 @@ p .sperolin {
     .burger_menu{
         box-shadow: 0px 1px 15px #797777;
         opacity: 0;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 1000;
         transition: 1000ms;
     }
 /* HEADER_MENU_FINISH */
