--- a/style.css
+++ b/style.css
@@ -956,15 +956,17 @@ p .sperolin {
         line-height: 24px;
         color: var(--color-8);
     }
+    header{
+        position: relative;
+        z-index: 2000;
+    }
     .burger_menu{
-        box-shadow: 0px 1px 15px #797777;
-        opacity: 0;
         position: fixed;
+        left: -278px;
         top: 0;
-        left: 0;
-        right: 0;
-        z-index: 1000;
-        transition: 1000ms;
+        transition: 800ms;
+        z-index: 2000;
+        box-shadow: 0px 1px 15px #797777;
     }
 /* HEADER_MENU_FINISH */
 
@@ -1055,6 +1057,74 @@ p .sperolin {
     .left_elements p{
         margin-bottom: 0 !important;
     }
+    .form_info{
+        padding: 104px 0 59px 0;
+        width: 100%;
+    }
+    .about_us__info h2{
+        font-size: 35px;
+    }
+    .info_elements img {
+        max-width: 516px;
+        height: 423px;
+    }
+    .info_elements{
+        flex-wrap: wrap;
+        margin-bottom: 47px;
+    }
+    .about_us__page{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .info_elements p{
+        margin-left: 0;
+        font-size: 30px;
+        line-height: 38px;
+        margin-top: 20px;
+    }
+    .about_us__page h3{
+        font-size: 45px;
+        margin-right: 0 !important;
+        margin-bottom: 30px;
+    }
+    .us_page{
+        margin-right: 0 !important;
+        margin-bottom: 20px;
+    }
+    .binders_info h3{
+        font-weight: 500;
+        font-size: 36px;
+        line-height: 49px;
+    }
+    .binders{
+        padding-top: 71px;
+    }
+    .us_page span{
+        font-size: 44px;
+    }
+    .us_page p{
+        font-size: 27px;
+    }
+    .cards{
+        flex-wrap: wrap;
+    }
+    .binders_info .card{
+        max-width: 238px;
+    }
+    .binders_info .card img{
+        margin-bottom: 14px;
+    }
+    .binders_info .card span{
+        font-size: 24px;
+        line-height: 29px;
+    }
+    .binders_info .card p{
+        font-size: 20px;
+        margin-top: 15px;
+    }
+    .binders_info .card{
+        margin-bottom: 15px;
+    }
     .card_img img {
         width: 96px;
         height: 82px;
@@ -1109,6 +1179,9 @@ p .sperolin {
         font-size: 12px;
     }
 
+    .about_us__page h3{
+        margin-right: auto !important;
+    }
     .sertificate_pages img{
         max-width: 165px;
     }
@@ -1352,8 +1425,8 @@ p .sperolin {
         left: 102px;
     }
     .title_p{
-        font-size: 35px;
-        line-height: 50px;
+        font-size: 29px;
+        line-height: 47px;
         margin-bottom: 17px;
     }
     .pages{
