--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ ol{
 
 .header_title_right {
     background: url(./assets/images/rasm.png) no-repeat center bottom / cover;
-    width: 543px;
+    width: 472px;
     height: 888px;
     display: flex;
     align-items: flex-end;
@@ -1440,6 +1440,24 @@ p .sperolin {
     .pages{
         margin-bottom: 25px;
     }
+}
+@media (max-width: 1450px) {
+    .info_elements img{
+        max-width: 600px;
+    }
+    .info_elements p{
+        font-size: 32px;
+    }
+    .main_info__left p{
+        font-size: 30px;
+    }
+    .main_info__left {
+        max-width: 534px;
+    }
+    .main_imgs img {
+        width: 259px;
+    }
+    
 }
 @media (max-width: 360px) {
     .info_elements img{
